# houston-energy-mapper

./: .env.example  .gitignore  README.md  cli.py  models.py  pyproject.toml
config/: corporate_vc_sources.yaml  settings.py
data/: validated_examples.jsonl
data/db/: pipeline.db
data/exports/: houston_energy_mapper_v1.xlsx
data/reference/: be_fellows_structured.json
dedupe/: __init__.py  matcher.py
docs/: founder_pedigree_taxonomy.md  houston_presence_signals.md  source_inventory.md  venture_scale_rubric.md
docs/archive/rice_alliance_fixtures/: README.md  etvf_2021_companies.html  racea_class5.html  racea_portfolio.html
enrich/: __init__.py  be_fellows_lookup.py  canonical_domain_coalesce.py  founder_extraction.py  founder_pedigree.py  founder_website_scraper.py  job_feeds_lookup.py  sub_sector.py  summary.py  texas_sos_lookup.py
flywheel/: __init__.py  examples_bank.py  relationship_graph.py  source_quality.py  validated_examples.py
harvest/: __init__.py  base.py  bev_portfolio.py  dcvc.py  ecv.py  energytech_nexus.py  ercot_queue.py  goose_capital.py  greentown_houston.py  halliburton_labs.py  innovationmap_rss.py  ion_district.py  lowercarbon.py  rbpc_alumni.py  rice_etvf.py  sec_edgar.py
llm/: __init__.py  client.py  prompt_loader.py
pipeline/: __init__.py  orchestrator.py
prompts/: classifier_v1.0.md  classifier_v1.1.md  founder_extraction_v1.md  founder_llm_lookup_v1.md  founder_pedigree_v1.md  founder_website_v1.md  sub_sector_v1.md  summary_v1.md
signals/: __init__.py  confidence.py  dedup.py  enrichment.py  houston_presence.py  venture_scale.py
storage/: __init__.py  db.py  export.py  relationship_graph.py  source_quality.py
tests/enrich/: test_be_fellows_lookup.py  test_canonical_domain_coalesce.py  test_founder_extraction.py  test_founder_pedigree.py  test_founder_website_scraper.py  test_job_feeds_lookup.py  test_texas_sos_lookup.py
tests/fixtures/: founder_pedigree_cases.json  houston_presence_cases.json  sample_companies.json  venture_scale_cases.json
tests/fixtures/bev_portfolio/: portfolio.html
tests/flywheel/: test_relationship_graph.py  test_source_quality.py  test_validated_examples.py
tests/harvest/: test_base.py  test_bev_portfolio.py  test_dcvc.py  test_ecv.py  test_energytech_nexus.py  test_ercot_queue.py  test_goose_capital.py  test_greentown_houston.py  test_halliburton_labs.py  test_innovationmap_rss.py  test_ion_district.py  test_lowercarbon.py  test_rbpc_alumni.py  test_rice_etvf.py  test_sec_edgar.py
tests/llm/: test_client.py
tests/signals/: test_classifier.py  test_dedup.py  test_enrichment.py  test_houston_presence.py  test_venture_scale.py
utils/: __init__.py  html_cleaner.py  rate_limiter.py  slugify.py
(+23 files in other folders)
